# random_generator

./: .pre-commit-config.yaml  main.py  pyporject.toml  pyproject.toml
generators/: __init__.py  generalized_feedbacked_shift_register.py  linear_congruential_generator.py  xorshift128+.py  xorshift32.py
src/generators/: __init__.py  linear_congruential_generator.py
